# binance-kyc-skill

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_ZH.md  SKILL.md  docker-compose.yml  kyc_flow.py  pyproject.toml  validators.py
.github/workflows/: deploy-pages.yml
demo_server/: __init__.py  app.py
docs/: BINANCE_INTEGRATION_GUIDE.md
messages/: en.json  zh.json
scripts/: demo.sh  lint.sh  start.sh
src/binance_kyc/: __init__.py  cli.py  config.py
src/binance_kyc/handlers/: __init__.py  telegram.py
src/binance_kyc/messages/: __init__.py  en.json  zh.json
src/binance_kyc/models/: __init__.py  enums.py  session.py
src/binance_kyc/services/: liveness.py  session_store.py  state_machine.py  validators.py
src/binance_kyc/utils/: logging.py
static/: app.js  business.html  i18n.js  index.html  style.css  user-demo.html
tests/: test_liveness.py  test_messages.py  test_session.py  test_session_store.py  test_state_machine.py  test_validators.py
todolist/: README.md  phase1-product.md  phase2-backend.md  phase3-distribution.md  phase4-launch.md
